--- a/references.bib
+++ b/references.bib
@@ -11,3 +11,14 @@
   url = {https://github.com/rfordatascience/tidytuesday/blob/master/data/2024/2024-04-30/readme.md},
   note = {Accessed: 19-May-2024}
 }
+
+@article{baig2021introducing,
+  title={Introducing the Worldwide Bureaucracy Indicators: A new global dataset on public sector employment and compensation},
+  author={Baig, Faisal Ali and Han, Xu and Hasnain, Zahid and Rogger, Daniel},
+  journal={Public Administration Review},
+  volume={81},
+  number={3},
+  pages={564--571},
+  year={2021},
+  publisher={Wiley Online Library}
+}
