--- a/presentation.qmd
+++ b/presentation.qmd
@@ -35,7 +35,10 @@ pacman::p_load(
   janitor,
   ggplot2,
   showtext,
-  gridExtra
+  gridExtra,
+  sf,
+  rnaturalearth,
+  rnaturalearthdata
   )
 
 options(width = 65)
@@ -71,12 +74,13 @@ knitr::opts_chunk$set(
 
 ## Introduction & Motivation
 
--   Selected datasets from the Worldwide Bureaucracy Indicators (WWBI)
--   Help gain insights into current scenarios of public policies
--   Understand the trends across geographies
+-   Selected datasets from Worldwide Bureaucracy Indicators (WWBI)
+-   Contain wages, income and employment information in public and private sector globally
+-   Utilized to create insights into current outcomes of public policies
+-   Understand the trends across geographies, and focus on a particular country
 -   How to improve or suggest improvements in country-specific needs and situations
 
-## Dataset - Worldwide Bureaucracy Indicators
+## Dataset - Worldwide Bureaucracy Indicators {.smaller}
 
 ```{r}
 #| label: load-data
@@ -96,9 +100,18 @@ wwbi_country <- tuesdata$wwbi_country
 
 ```
 
--   **wwbi_data** - information on the country code, bureaucracy indicator code, year and numeric value of data.
--   **wwbi_series** - the bureaucracy indicator code and the name of the indicator
--   **wwbi_country** - country code, detailed information on country's name, currency, region, income group etc.
+wwbi_data, wwbi_series, and wwbi_country
+
+```{r}
+#| label: show-data
+#| message: false
+#| echo: false
+
+glimpse(wwbi_data)
+glimpse(wwbi_series)
+glimpse(wwbi_country)
+
+```
 
 ## Questions
 
@@ -144,44 +157,59 @@ grouped_ps_empl_ind <- ps_empl_indicator %>%
 
 # print(grouped_ps_empl_ind)
 
-# Filter for the public sector employment indicator
-employment_data <- merged_df %>%
+# Filter for the public sector employment indicator (share of total employment)
+employment_data_tot <- merged_df %>%
   filter(indicator_code == "BI.EMP.TOTL.PB.ZS")
 
-# print(employment_data)
+# Filter for the public sector employment indicator  (share of total and paid employment)  
+empl_data_tot_paid <- merged_df %>%
+  filter(indicator_code %in% c("BI.EMP.TOTL.PB.ZS", "BI.EMP.PWRK.PB.ZS", "BI.EMP.FRML.PB.ZS", "BI.EMP.TOTL.PB.UR.ZS", "BI.EMP.TOTL.PB.RU.ZS"))
 
-# Aggregate data by year and region
-# aggregated_data <- employment_data %>%
-#   group_by(year, region) %>%
-#   summarise(mean_value = mean(value, na.rm = TRUE))
+# print(empl_data_tot_paid)
 
-# Aggregate data by year and region
-aggregated_data <- employment_data %>%
+# Aggregate data by year and region - for All geogrpahies
+aggregated_data <- employment_data_tot %>%
   group_by(year, region) %>%
   summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
 
-aggregated_data_na <- aggregated_data %>%
-  filter(region == "North America")
+# # Aggregate data by year, region, and indicator_code - for NA
+# aggregated_data_na <- empl_data_tot_paid %>%
+#   group_by(year, region, indicator_code) %>%
+#   summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
 
-# Create plot_a with decreased width
-plot_a <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, color = region)) +
-  geom_line() +
-  geom_point() +
-  labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nNorth America",
-       x = "Year",
-       y = "Public Sector Employment Share (%)",
-       color = "Region") +
-  theme_minimal() +
-  theme(text = element_text(size = 8),
-        axis.text.y = element_text(size = 9),
-        legend.position = "bottom",
-        plot.margin = margin(10, 10, 10, 10))  # Add margin around plot_a
+# aggregated_data_na <- aggregated_data_na %>%
+#   filter(region == "North America")
+
+# print(aggregated_data_na)
+
+# # Create plot_a with decreased width and separate colors for each indicator_code
+# plot_a <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, color = indicator_code, linetype = indicator_code)) +
+#   geom_line() +
+#   geom_point() +
+#   facet_wrap(~ region) +
+#   labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nNorth America",
+#        x = "Year",
+#        y = "Public Sector Employment Share (%)",
+#        color = "Indicator Code",
+#        linetype = "Indicator Code") +
+#   theme_minimal() +
+#   theme(text = element_text(size = 8),
+#         axis.text.y = element_text(size = 9),
+#         legend.position = "bottom",
+#         legend.title = element_blank(),
+#         legend.text = element_text(size = 8),
+#         legend.spacing.y = unit(0.5, 'lines'),
+#         plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
+#   guides(color = guide_legend(nrow = 3), linetype = guide_legend(nrow = 3))
+# 
+# print(plot_a)
 
 # Create plot_b with increased width
 plot_b <- ggplot(aggregated_data, aes(x = year, y = mean_value, color = region)) +
   geom_line() +
+  scale_x_continuous(breaks = unique(aggregated_data$year)) +
   geom_point() +
-  labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nAll Geographies",
+  labs(title = "Public Sector Employment as a Share of Total Employment Over Time by Region All Geographies",
        x = "Year",
        y = "Public Sector Employment Share (%)",
        color = "Region") +
@@ -190,12 +218,14 @@ plot_b <- ggplot(aggregated_data, aes(x = year, y = mean_value, color = region))
         axis.text.y = element_text(size = 9),
         legend.position = "bottom",
         plot.margin = margin(10, 10, 10, 10),
-        legend.key.size = unit(0.5, "lines"),   
-        legend.spacing.x = unit(0.2, "cm")    
+        legend.key.size = unit(0.7, "lines"),   
+        legend.spacing.x = unit(0.5, "cm")    
         )  
 
+print(plot_b)
+
 # Display the plots side by side with adjusted widths
-grid.arrange(plot_b, plot_a, ncol = 2, widths = c(0.55, 0.45))
+# grid.arrange(plot_b, plot_a, ncol = 2, widths = c(0.55, 0.45))
 
 ```
 
@@ -203,6 +233,202 @@ grid.arrange(plot_b, plot_a, ncol = 2, widths = c(0.55, 0.45))
 
 ```{r}
 #| label: Visualization-2
+#| message: false
+#| echo: false
+
+# Load necessary libraries
+library(ggplot2)
+library(dplyr)
+library(sf)
+library(rnaturalearth)
+library(rnaturalearthdata)
+library(viridis)
+
+# Replicate base data into three dataframes to analyze question 1
+country_df <- wwbi_country 
+data_df <- wwbi_data 
+series_df <- wwbi_series 
+
+# Merge the three data frames on indicator code and country code 
+merged_df <- merge(data_df, series_df, by = "indicator_code")
+merged_df <- merge(merged_df, country_df, by = "country_code")
+
+# Filter for the public sector employment indicator (share of total employment)
+employment_data_tot <- merged_df %>%
+  filter(indicator_code == "BI.EMP.TOTL.PB.ZS")
+
+# Aggregate data by region to get the mean employment share
+aggregated_data <- employment_data_tot %>%
+  group_by(region) %>%
+  summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
+
+# Get world map data
+world <- ne_countries(scale = "medium", returnclass = "sf")
+
+# Join aggregated data with world map data
+world_aggregated <- world %>%
+  left_join(aggregated_data, by = c("region_wb" = "region"))
+
+# Create heatmap plot with continuous color scale
+plot_heatmap <- ggplot(data = world_aggregated) +
+  geom_sf(aes(fill = mean_value), color = "black", size = 0.1) +
+  scale_fill_viridis_c(option = "plasma", na.value = "grey50", name = "Public Sector\nEmployment Share (%)") +
+  theme_minimal() +
+  labs(title = "Public Sector Employment Share by Region",
+       fill = "Employment Share (%)",
+       caption = "Source: WWBI Data") +
+  theme(
+    text = element_text(size = 8),
+    legend.position = "bottom",
+    legend.direction = "horizontal",
+    legend.key.width = unit(2, "cm"),  # Elongate the legend key width
+    legend.key.height = unit(0.5, "cm"),  # Adjust the legend key height
+    plot.margin = margin(10, 10, 10, 10),
+    legend.title = element_text(size = 8),  # Adjust legend title size
+    legend.text = element_text(size = 8)  # Adjust legend text size
+  )
+
+print(plot_heatmap)
+
+```
+
+## Visualization - 3
+
+```{r}
+#| label: Visualization-3
+#| message: false
+#| echo: false
+
+
+# Create a named vector for descriptive labels
+indicator_labels <- c(
+  "BI.EMP.TOTL.PB.ZS" = "Share of total employment",
+  "BI.EMP.PWRK.PB.ZS" = "Share of paid employment",
+  "BI.EMP.FRML.PB.ZS" = "Share of formal employment",
+  "BI.EMP.TOTL.PB.UR.ZS" = "Share of total employment by urban location",
+  "BI.EMP.TOTL.PB.RU.ZS" = "Share of total employment by rural location"
+)
+
+# Filter for the public sector employment indicator (share of total and paid employment)
+empl_data_tot_paid <- merged_df %>%
+  filter(indicator_code %in% names(indicator_labels))
+
+# Add a new column for descriptive labels
+empl_data_tot_paid <- empl_data_tot_paid %>%
+  mutate(indicator_label = factor(indicator_code, levels = names(indicator_labels), labels = indicator_labels))
+
+# Check the data availability for each indicator code
+# table(empl_data_tot_paid$indicator_label)
+
+# Aggregate data by year, region, and indicator_label - for NA
+aggregated_data_na <- empl_data_tot_paid %>%
+  group_by(year, region, indicator_label) %>%
+  summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
+
+aggregated_data_na <- aggregated_data_na %>%
+  filter(region == "North America")
+
+# Create plot_a with decreased width and separate colors for each indicator_label
+# plot_na <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, color = indicator_label, linetype = indicator_label)) +
+#   geom_line() +
+#   scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
+#   geom_point() +
+#   labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nNorth America",
+#        x = "Year",
+#        y = "Public Sector Employment Share (%)",
+#        color = "Indicator",
+#        linetype = "Indicator") +
+#   theme_minimal() +
+#   theme(text = element_text(size = 8),
+#         axis.text.y = element_text(size = 9),
+#         legend.position = "bottom",
+#         legend.title = element_blank(),
+#         legend.text = element_text(size = 8),
+#         legend.spacing.y = unit(0.5, 'lines'),
+#         plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
+#   guides(color = guide_legend(nrow = 3), linetype = guide_legend(nrow = 3))
+# 
+# print(plot_na)
+
+# Create plot_a with decreased width and separate colors for each indicator_label
+plot_na2 <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, fill = indicator_label)) +
+  geom_bar(stat = "identity", position = "dodge") +
+  scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
+  labs(title = "Public Sector Employment as a Share of Total Employment Over Time by Region North America",
+       x = "Year",
+       y = "Public Sector Employment Share (%)",
+       fill = "Indicator") +
+  theme_minimal() +
+  theme(text = element_text(size = 8),
+        axis.text.y = element_text(size = 9),
+        legend.position = "bottom",
+        legend.title = element_blank(),
+        legend.text = element_text(size = 8),
+        legend.spacing.y = unit(0.5, 'lines'),
+        plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
+  guides(fill = guide_legend(nrow = 3))
+
+print(plot_na2)
+
+```
+
+## Visualization - 4
+
+```{r}
+#| label: Visualization-4
+#| message: false
+#| echo: false
+
+# Filter for North America region and the two countries
+north_america_data <- empl_data_tot_paid %>%
+  filter(region == "North America")
+
+#, country %in% c("Canada", "United States of America")
+
+# Create a named vector for descriptive labels
+indicator_labels <- c(
+  "BI.EMP.TOTL.PB.ZS" = "Share of total employment",
+  "BI.EMP.PWRK.PB.ZS" = "Share of paid employment",
+  "BI.EMP.FRML.PB.ZS" = "Share of formal employment",
+  "BI.EMP.TOTL.PB.UR.ZS" = "Share of total employment by urban location",
+  "BI.EMP.TOTL.PB.RU.ZS" = "Share of total employment by rural location"
+)
+
+# Add a new column for descriptive labels
+north_america_data <- north_america_data %>%
+  mutate(indicator_label = factor(indicator_code, levels = names(indicator_labels), labels = indicator_labels))
+
+# Aggregate data by year, country, and indicator_label
+aggregated_data_na <- north_america_data %>%
+  group_by(year, country_code, indicator_label) %>%
+  summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
+
+# Create the grouped bar plot
+plot_na <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, fill = country_code)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  facet_wrap(~ indicator_label, scales = "free_y") +
+  scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
+  labs(title = "Comparison of Public Sector Employment Indicators between Canada and United States of America\nOver the Years",
+       x = "Year",
+       y = "Public Sector Employment Share (%)",
+       fill = "Country") +
+  theme_minimal() +
+  theme(text = element_text(size = 8),
+        axis.text.y = element_text(size = 9),
+        legend.position = "bottom",
+        legend.title = element_blank(),
+        legend.text = element_text(size = 8),
+        legend.spacing.y = unit(0.5, 'lines'),
+        plot.margin = margin(10, 10, 10, 10))
+
+print(plot_na)
+
+```
+
+## Visualization - 5
+
+```{r}
+#| label: Visualization-5
 #| message: false
 #| echo: false
 
@@ -249,3 +475,6 @@ ggplot(efficiency_aggregated_2, aes(x = year, y = mean_efficiency, color = incom
   theme_minimal()
 
 ```
+
+## Conclusion and Future Work
+
