--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Utilize Worldwide Bureaucracy Indicators to implement public policies"
+title: "Research Worldwide Bureaucracy Indicators to help implement efficient public policies"
 subtitle: "INFO 526 - Summer 2024 - Final Project"
 author: "Mohammad Rahat Helal"
 title-slide-attributes:
@@ -38,7 +38,8 @@ pacman::p_load(
   gridExtra,
   sf,
   rnaturalearth,
-  rnaturalearthdata
+  rnaturalearthdata,
+  skimr
   )
 
 options(width = 65)
@@ -107,9 +108,12 @@ wwbi_data, wwbi_series, and wwbi_country
 #| message: false
 #| echo: false
 
+options(width = 200)  # You can increase this number to a value that suits your needs
+
 glimpse(wwbi_data)
 glimpse(wwbi_series)
 glimpse(wwbi_country)
+
 
 ```
 
@@ -125,7 +129,7 @@ Compare the different regions globally, research how has public sector employmen
 
 In context of public administration in different geographies, what is the relationship between income group and public administration efficiency?
 
-## Visualization - 1
+## Visualization - 1 (Question 1a)
 
 ```{r}
 #| label: Visualization-1
@@ -148,14 +152,10 @@ ps_empl_indicator <- merged_df %>%
 distinct_ps_empl_ind <- ps_empl_indicator %>%
   distinct(indicator_code, indicator_name)
 
-# print(distinct_ps_empl_ind)
-
 grouped_ps_empl_ind <- ps_empl_indicator %>%
   group_by(indicator_code, indicator_name) %>%
   summarise(record_count = n(), .groups = "drop") %>% 
   arrange(desc(record_count))
-
-# print(grouped_ps_empl_ind)
 
 # Filter for the public sector employment indicator (share of total employment)
 employment_data_tot <- merged_df %>%
@@ -165,51 +165,17 @@ employment_data_tot <- merged_df %>%
 empl_data_tot_paid <- merged_df %>%
   filter(indicator_code %in% c("BI.EMP.TOTL.PB.ZS", "BI.EMP.PWRK.PB.ZS", "BI.EMP.FRML.PB.ZS", "BI.EMP.TOTL.PB.UR.ZS", "BI.EMP.TOTL.PB.RU.ZS"))
 
-# print(empl_data_tot_paid)
-
 # Aggregate data by year and region - for All geogrpahies
 aggregated_data <- employment_data_tot %>%
   group_by(year, region) %>%
   summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
-
-# # Aggregate data by year, region, and indicator_code - for NA
-# aggregated_data_na <- empl_data_tot_paid %>%
-#   group_by(year, region, indicator_code) %>%
-#   summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
-
-# aggregated_data_na <- aggregated_data_na %>%
-#   filter(region == "North America")
-
-# print(aggregated_data_na)
-
-# # Create plot_a with decreased width and separate colors for each indicator_code
-# plot_a <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, color = indicator_code, linetype = indicator_code)) +
-#   geom_line() +
-#   geom_point() +
-#   facet_wrap(~ region) +
-#   labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nNorth America",
-#        x = "Year",
-#        y = "Public Sector Employment Share (%)",
-#        color = "Indicator Code",
-#        linetype = "Indicator Code") +
-#   theme_minimal() +
-#   theme(text = element_text(size = 8),
-#         axis.text.y = element_text(size = 9),
-#         legend.position = "bottom",
-#         legend.title = element_blank(),
-#         legend.text = element_text(size = 8),
-#         legend.spacing.y = unit(0.5, 'lines'),
-#         plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
-#   guides(color = guide_legend(nrow = 3), linetype = guide_legend(nrow = 3))
-# 
-# print(plot_a)
 
 # Create plot_b with increased width
 plot_b <- ggplot(aggregated_data, aes(x = year, y = mean_value, color = region)) +
   geom_line() +
   scale_x_continuous(breaks = unique(aggregated_data$year)) +
   geom_point() +
-  labs(title = "Public Sector Employment as a Share of Total Employment Over Time by Region All Geographies",
+  labs(title = "Public Sector Employment as a Share of Total Employment\nOver Time by Region - All Geographies",
        x = "Year",
        y = "Public Sector Employment Share (%)",
        color = "Region") +
@@ -229,150 +195,7 @@ print(plot_b)
 
 ```
 
-## Visualization - 2
-
-```{r}
-#| label: Visualization-2
-#| message: false
-#| echo: false
-
-# Load necessary libraries
-library(ggplot2)
-library(dplyr)
-library(sf)
-library(rnaturalearth)
-library(rnaturalearthdata)
-library(viridis)
-
-# Replicate base data into three dataframes to analyze question 1
-country_df <- wwbi_country 
-data_df <- wwbi_data 
-series_df <- wwbi_series 
-
-# Merge the three data frames on indicator code and country code 
-merged_df <- merge(data_df, series_df, by = "indicator_code")
-merged_df <- merge(merged_df, country_df, by = "country_code")
-
-# Filter for the public sector employment indicator (share of total employment)
-employment_data_tot <- merged_df %>%
-  filter(indicator_code == "BI.EMP.TOTL.PB.ZS")
-
-# Aggregate data by region to get the mean employment share
-aggregated_data <- employment_data_tot %>%
-  group_by(region) %>%
-  summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
-
-# Get world map data
-world <- ne_countries(scale = "medium", returnclass = "sf")
-
-# Join aggregated data with world map data
-world_aggregated <- world %>%
-  left_join(aggregated_data, by = c("region_wb" = "region"))
-
-# Create heatmap plot with continuous color scale
-plot_heatmap <- ggplot(data = world_aggregated) +
-  geom_sf(aes(fill = mean_value), color = "black", size = 0.1) +
-  scale_fill_viridis_c(option = "plasma", na.value = "grey50", name = "Public Sector\nEmployment Share (%)") +
-  theme_minimal() +
-  labs(title = "Public Sector Employment Share by Region",
-       fill = "Employment Share (%)",
-       caption = "Source: WWBI Data") +
-  theme(
-    text = element_text(size = 8),
-    legend.position = "bottom",
-    legend.direction = "horizontal",
-    legend.key.width = unit(2, "cm"),  # Elongate the legend key width
-    legend.key.height = unit(0.5, "cm"),  # Adjust the legend key height
-    plot.margin = margin(10, 10, 10, 10),
-    legend.title = element_text(size = 8),  # Adjust legend title size
-    legend.text = element_text(size = 8)  # Adjust legend text size
-  )
-
-print(plot_heatmap)
-
-```
-
-## Visualization - 3
-
-```{r}
-#| label: Visualization-3
-#| message: false
-#| echo: false
-
-
-# Create a named vector for descriptive labels
-indicator_labels <- c(
-  "BI.EMP.TOTL.PB.ZS" = "Share of total employment",
-  "BI.EMP.PWRK.PB.ZS" = "Share of paid employment",
-  "BI.EMP.FRML.PB.ZS" = "Share of formal employment",
-  "BI.EMP.TOTL.PB.UR.ZS" = "Share of total employment by urban location",
-  "BI.EMP.TOTL.PB.RU.ZS" = "Share of total employment by rural location"
-)
-
-# Filter for the public sector employment indicator (share of total and paid employment)
-empl_data_tot_paid <- merged_df %>%
-  filter(indicator_code %in% names(indicator_labels))
-
-# Add a new column for descriptive labels
-empl_data_tot_paid <- empl_data_tot_paid %>%
-  mutate(indicator_label = factor(indicator_code, levels = names(indicator_labels), labels = indicator_labels))
-
-# Check the data availability for each indicator code
-# table(empl_data_tot_paid$indicator_label)
-
-# Aggregate data by year, region, and indicator_label - for NA
-aggregated_data_na <- empl_data_tot_paid %>%
-  group_by(year, region, indicator_label) %>%
-  summarise(mean_value = mean(value, na.rm = TRUE), .groups = "drop")
-
-aggregated_data_na <- aggregated_data_na %>%
-  filter(region == "North America")
-
-# Create plot_a with decreased width and separate colors for each indicator_label
-# plot_na <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, color = indicator_label, linetype = indicator_label)) +
-#   geom_line() +
-#   scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
-#   geom_point() +
-#   labs(title = "Public Sector Employment as a Share of\nTotal Employment Over Time by Region\nNorth America",
-#        x = "Year",
-#        y = "Public Sector Employment Share (%)",
-#        color = "Indicator",
-#        linetype = "Indicator") +
-#   theme_minimal() +
-#   theme(text = element_text(size = 8),
-#         axis.text.y = element_text(size = 9),
-#         legend.position = "bottom",
-#         legend.title = element_blank(),
-#         legend.text = element_text(size = 8),
-#         legend.spacing.y = unit(0.5, 'lines'),
-#         plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
-#   guides(color = guide_legend(nrow = 3), linetype = guide_legend(nrow = 3))
-# 
-# print(plot_na)
-
-# Create plot_a with decreased width and separate colors for each indicator_label
-plot_na2 <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, fill = indicator_label)) +
-  geom_bar(stat = "identity", position = "dodge") +
-  scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
-  labs(title = "Public Sector Employment as a Share of Total Employment Over Time by Region North America",
-       x = "Year",
-       y = "Public Sector Employment Share (%)",
-       fill = "Indicator") +
-  theme_minimal() +
-  theme(text = element_text(size = 8),
-        axis.text.y = element_text(size = 9),
-        legend.position = "bottom",
-        legend.title = element_blank(),
-        legend.text = element_text(size = 8),
-        legend.spacing.y = unit(0.5, 'lines'),
-        plot.margin = margin(10, 10, 10, 10)) +  # Add margin around plot_a
-  guides(fill = guide_legend(nrow = 3))
-
-print(plot_na2)
-
-```
-
-## Visualization - 4
+## Visualization - 2 (Question 1b)
 
 ```{r}
 #| label: Visualization-4
@@ -383,9 +206,7 @@ print(plot_na2)
 north_america_data <- empl_data_tot_paid %>%
   filter(region == "North America")
 
-#, country %in% c("Canada", "United States of America")
-
-# Create a named vector for descriptive labels
+# named vector for five indicators
 indicator_labels <- c(
   "BI.EMP.TOTL.PB.ZS" = "Share of total employment",
   "BI.EMP.PWRK.PB.ZS" = "Share of paid employment",
@@ -408,7 +229,7 @@ plot_na <- ggplot(aggregated_data_na, aes(x = year, y = mean_value, fill = count
   geom_bar(stat = "identity", position = position_dodge()) +
   facet_wrap(~ indicator_label, scales = "free_y") +
   scale_x_continuous(breaks = unique(aggregated_data_na$year)) +
-  labs(title = "Comparison of Public Sector Employment Indicators between Canada and United States of America\nOver the Years",
+  labs(title = "Comparison of Public Sector Employment Indicators between\nCanada and United States of America\nOver the Years",
        x = "Year",
        y = "Public Sector Employment Share (%)",
        fill = "Country") +
@@ -425,14 +246,12 @@ print(plot_na)
 
 ```
 
-## Visualization - 5
+## Visualization - 3 (Question 2)
 
 ```{r}
-#| label: Visualization-5
+#| label: Question-2
 #| message: false
 #| echo: false
-
-# Read the data
 
 country_df_2 <- wwbi_country 
 data_df_2 <- wwbi_data 
@@ -464,17 +283,28 @@ efficiency_aggregated_2 <- merged_df_2 %>%
   group_by(income_group, year) %>%
   summarise(mean_efficiency = mean(value, na.rm = TRUE), .groups = "drop")
 
-# Plot the data
-ggplot(efficiency_aggregated_2, aes(x = year, y = mean_efficiency, color = income_group)) +
+# Plot the data as a facet grid with line graphs
+ggplot(efficiency_aggregated_2, aes(x = year, y = mean_efficiency, group = income_group, color = income_group)) +
   geom_line() +
   geom_point() +
-  labs(title = "Relationship Between Income Group and\nPublic Administration Efficiency Over Time",
+  facet_wrap(~ income_group, scales = "free_y") +
+  labs(title = "Relationship Between Income Group and Public Administration Efficiency Over Years",
        x = "Year",
-       y = "Public Administration Efficiency",
-       color = "Income Group") +
-  theme_minimal()
+       y = "Public Administration Efficiency") +
+  theme_minimal() +
+  theme(
+    text = element_text(size = 8),
+    axis.text.x = element_text(hjust = 1),
+    legend.position = "none",
+    plot.margin = margin(10, 10, 10, 10)
+  )
 
 ```
 
-## Conclusion and Future Work
+## Conclusions and Future Works
 
+-   Researched and plott the trend of public sector employment over the years for all geographies
+-   Focus on several indicators between Canada and USA over the years
+-   Establish a relationship between different income groups and public administration efficiency over the years for all regions
+-   Research the disparities in income groups by gender, wage premium, and other indicators
+-   Suggest practices to bridge the gaps between similar economies
